# PiCode

./: .gitignore  Cargo.toml  LICENSE  README.md  VERIFICATION_REPORT.md  VERIFICATION_STRATEGY.md  prompts  verify.rs
1-specifications/: 01-project.md
2-analysis/: 00-research-summary.md  01-claude-code-analysis.md  02-zellij-integration-analysis.md  03-openapi-multi-llm-strategy.md  04-rust-technology-stack.md  architecture-design.md  component-specifications.md  wasm-compilation-strategy.md
doc/: NAVIGATION.md  README.md  STYLE_GUIDE.md
doc/ai/: AI_INTEGRATION.md  MCP_INTEGRATION.md  index.md
doc/ai/context/: index.md
doc/developer/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  index.md
doc/developer/architecture/: index.md
doc/user/: GETTING_STARTED.md  HOOKS.md  SLASH_COMMANDS.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.md
doc/user/examples/: index.md
doc/user/guides/: index.md
doc/user/quickstart/: index.md
doc/user/reference/: index.md
memory/agents/: README.md
memory/sessions/: README.md
picode-cli/: Cargo.toml
picode-cli/src/: args.rs  commands.rs  lib.rs
picode-cli/templates/: gitignore.template
picode-core/: Cargo.toml
picode-core/src/: command.rs  event.rs  lib.rs  pane.rs  session.rs  traits.rs  workspace.rs
picode-hooks/: Cargo.toml
picode-hooks/src/: hooks.rs  lib.rs  registry.rs
picode-llm/: Cargo.toml
picode-llm/src/: client.rs  lib.rs  openapi.rs  providers.rs
picode-wasm/: Cargo.toml
picode-wasm/src/: lib.rs
src/: cli.rs  config.rs  error.rs  execute.rs  interactive.rs  lib.rs  logging.rs  main.rs
tests/: mod.rs  test_runner.rs
tests/e2e/: mod.rs
tests/integration/: mod.rs
tests/performance/: mod.rs
tests/security/: mod.rs
tests/unit/: mod.rs
