[package]
name = "picode-wasm"
version = "0.1.0"
authors = ["PiCode Team <dev@picode.org>"]
edition = "2021"
description = "WebAssembly integration for PiCode"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"